<resources>
    <string name="app_name">Weather App</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">Home</string>
    <string name="cities">Saved Cities</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search cities</string>
    <string name="search_title">Search</string>
    <string name="city_population">"Population: %1$s"</string>
    <string name="weather_forecast">Forecast</string>
    <string name="comma">,</string>
    <string name="map">Map</string>
    <string name="city_timezone">Timezone : %1$s</string>
    <string name="city_icon_content_descr">Icon which shows city buildings</string>
    <string name="city_favorite_icon_content_description">Icon used to mark this city as favorite</string>
    <string name="cities_suggestions_no_results_found">No results found!</string>
    <string name="city_selected_msg">%1$s selected!</string>
    <string name="city_favorite_success">This city has been added to the list of favorites cities</string>
    <string name="city_favorite_error">An error occurred while adding city to the favorites.</string>
    <string name="city_not_favorite_success">City removed from favorites</string>
    <string name="cities_no_favorite_found">You have not marked any city as favorite yet.</string>
    <string name="cities_favorites_header">Favorite Cities</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_today">Today</string>
    <string name="weather_per_hour">Hourly</string>
    <string name="weather_wind">Wind</string>
    <string name="weather_rain">Rain</string>
    <string name="weather_cloud">Cloud</string>
    <string name="weather_feels">Feels like %1$s</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_hour">Sunrise: %1$s</string>
    <string name="sunset_hour">Sunset: %1$s</string>
    <string name="weather_humidity">Humidity</string>
    <string name="moonset">Moonset</string>
    <string name="moonrise">Moonrise</string>
    <string name="Sunset">Sunset</string>
    <string name="weather_next_days">Next 5 days</string>
    <string name="current_weather_conditions">Current Conditions</string>
    <string name="temperature">Temperature</string>
    <string name="weather_more_title">More</string>
    <string name="weather_temp_max_min">Weather forecasted for today will have a maximum temperature of %1$s and a minimum of %2$s.</string>
    <string name="latest_update">Latest Update: %1$s</string>
    <string name="information">Information</string>
    <string name="weather_temp_feels">Feels</string>
    <string name="weather_condition_snow">Snow chance</string>
    <string name="weather_condition_uv_index">UV Index</string>
    <string name="hours">%1$s hours</string>
    <string name="no_weather_hourly_data_found">No data provided!</string>
    <string name="weather_precipitation">Precipitation</string>
    <string name="weather_pressure">Pressure</string>
    <string name="weather_heat">Heat</string>
    <string name="weather_dew">Dew Point</string>
    <string name="weather_windchill">Wind Chill</string>
    <string name="weather_windgust">Wind Gust</string>
    <string name="location_providers_not_enabled">Location providers of your device are not enabled!</string>
    <string name="location_permission_not_allowed">You will not get weather forecast for your current location. Please open this app\'s settings to allow.</string>
    <string name="loading">Loading…</string>
    <string name="next_days_list_error">Error while loading next days quick overview data</string>
    <string name="list_items_error">An error occured while loading items!</string>
    <string name="next_days_list_empty">No data provided</string>
    <string name="weather_wind_speed">Wind Speed</string>
    <string name="weather_wind_direction">Wind Direction</string>
    <string name="weather_last_update">Last Update</string>
    <string name="weather_visibility">Visibility</string>
    <string name="msg_warning">Warning</string>
    <string name="msg_permission">This app need your Location permission, in order to fetch weather forecast for your current location</string>
    <string name="msg_ok">OK</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_no_thanks">No, Thanks</string>
    <string name="prompt">Please select a city or enable the location permission for this app to view details regarding weather forecast</string>
</resources>