<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.jvoyatz.weather.app.WeatherViewModel" />

        <import type="com.jvoyatz.weather.app.Constants"/>
        <import type="com.jvoyatz.weather.app.R"/>
        <import type="com.jvoyatz.weather.app.util.Utils"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/weather_today"
            app:layout_constraintEnd_toEndOf="@id/materialCardView2"
            app:layout_constraintStart_toStartOf="@id/materialCardView2"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/weather_latest_update"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@{viewmodel.weatherResponseLiveData.data.currentCondition.observationTime}"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
            app:layout_constraintTop_toBottomOf="@+id/today"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_1"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_2"
            app:layout_constraintTop_toBottomOf="@id/weather_latest_update"
            android:visibility="visible"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/weather_icon"
                    imageUrl="@{viewmodel.weatherResponseLiveData.data.currentCondition.weatherIconUrl}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_wind_direction"
                    app:layout_constrainedHeight="true"
                    app:layout_constrainedWidth="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@+id/weather_descr"
                    app:layout_constraintEnd_toStartOf="@id/temperature"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/temperature"
                    style="?attr/textAppearanceHeadline4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.weatherResponseLiveData.data.currentCondition.tempC + ` ` + Constants.CELSIUS}"
                    android:textColor="@color/material_on_background_emphasis_high_type"
                    android:gravity="center"
                    app:layout_constraintHorizontal_weight="0.5"
                    app:layout_constraintBottom_toTopOf="@id/temperature_feel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/weather_icon"
                    app:layout_constraintTop_toTopOf="@+id/weather_icon"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="19" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/temperature_feel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{@string/weather_feels(viewmodel.weatherResponseLiveData.data.currentCondition.feelsLikeC + ` ` + Constants.CELSIUS)}"
                    app:layout_constraintBottom_toBottomOf="@+id/weather_icon"
                    app:layout_constraintEnd_toEndOf="@+id/temperature"
                    app:layout_constraintStart_toStartOf="@+id/temperature"
                    app:layout_constraintTop_toBottomOf="@+id/temperature"
                    tools:text="feels" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/weather_descr"
                    style="?attr/textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.weatherResponseLiveData.data.currentCondition.weatherDesc}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/temperature"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/weather_icon"
                    app:layout_constraintTop_toBottomOf="@+id/weather_icon"
                    tools:text="SUnny" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/next_5_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:text="@string/weather_next_days"
            android:textStyle="bold"
            android:padding="4dp"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next_5_days"
            tools:listitem="@layout/home_fragment_next_day_item" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_weather_conditions"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:textStyle="bold"
            android:text="@string/current_weather_conditions"
            app:layout_constraintStart_toStartOf="@+id/next_5_days"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:constraint_referenced_ids="cond_temp, cond_temp_value, cond_wind, wind_wrapper, cond_rain, cond_rain_value, cond_cloud, cond_cloud_value, cond_humidity, cond_humidity_value"
            app:flow_horizontalStyle="spread_inside"
            app:flow_maxElementsWrap="2"
            app:flow_verticalGap="4dp"
            app:flow_wrapMode="chain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_weather_conditions" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cond_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:gravity="start"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constrainedWidth="true"
            android:background="@drawable/underline"
            android:padding="7dp"
            app:layout_constraintHorizontal_weight="0.6"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cond_temp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="19"
            android:gravity="end"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:background="@drawable/underline"
            android:padding="7dp"
            android:text="@{viewmodel.weatherResponseLiveData.data.currentCondition.tempC}"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cond_wind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="?android:attr/textColorSecondary"
            android:gravity="start"
            app:layout_constrainedWidth="true"
            android:background="@drawable/underline"
            android:padding="7dp"
            android:text="@string/weather_wind" />

        <LinearLayout
            android:id="@+id/wind_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cond_wind_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/underline"
                android:gravity="center_vertical"
                android:text="@{viewmodel.weatherResponseLiveData.data.currentCondition.windspeedKmph + ` km/h ` + viewmodel.weatherResponseLiveData.data.currentCondition.winddir16Point}"
                app:layout_constrainedWidth="true"
                android:padding="7dp"
                tools:text="19" />
            <ImageView
                android:id="@+id/cond_wind_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_wind_direction"
                degrees="@{viewmodel.weatherResponseLiveData.data.currentCondition.winddirDegree}"
                app:srcCompat="@drawable/ic_wind_direction"/>
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cond_rain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="?android:attr/textColorSecondary"
            android:gravity="start"
            app:layout_constrainedWidth="true"
            android:background="@drawable/underline"
            android:padding="7dp"
            android:text="@string/weather_rain"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cond_rain_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:background="@drawable/underline"
            android:padding="7dp"
            tools:text="@{viewmodel.weatherResponseLiveData.data.currentCondition.precipMM + ` mm`}" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cond_cloud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="?android:attr/textColorSecondary"
            android:background="@drawable/underline"
            app:layout_constrainedWidth="true"
            android:padding="7dp"
            android:text="@string/weather_cloud" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cond_cloud_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:background="@drawable/underline"
            android:padding="7dp"
            android:text="@{viewmodel.weatherResponseLiveData.data.currentCondition.cloudcover + ` ` + Constants.PERCENT}" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cond_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constrainedWidth="true"
            android:padding="7dp"
            android:background="@drawable/underline"
            android:text="@string/weather_humidity" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cond_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:background="@drawable/underline"
            android:padding="7dp"
            android:text="@{viewmodel.weatherResponseLiveData.data.currentCondition.humidity + ` ` + Constants.PERCENT}"
            tools:text="19" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/weather_more_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_more_title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_2"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_1"
            app:layout_constraintTop_toBottomOf="@+id/flow2"
            app:layout_constraintHorizontal_weight="0.6"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>